--- a/style.css
+++ b/style.css
@@ -4,42 +4,38 @@
 }
 
 #game {
-    width: 1920px;
-    height: 1080px;
-    border: 1px solid black;
+    width: 100vw;
+    height: 100vh;
 }
 
 #character {
-    width: 20px;
+    width: 50px;
     height: 100px;
-    background-color: grey;
-    position: relative;
-    top: 200px;
+    position: absolute;
+    bottom: 0px;
 }
 
 .animate {
     animation: jump 500ms;
 }
 
-
 @keyframes jump {
-    0%{top:200px;}
-    30%{top:100px;}
-    70%{top:100px;}
-    100%{top:200px;}
+    0%{bottom:200px;}
+    30%{bottom:100px;}
+    70%{bottom:100px;}
+    100%{bottom:200px;}
 }
 
 #block {
     width: 50px;
     height: 50px;
-    background-color: red;
-    position: relative;
-    top: 150px;
-    left: 450px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
     animation: block 1s infinite linear; 
 }
 
 @keyframes block {
-    0%{left:450px;}
+    0%{left: 100vw;}
     100%{left:-100px;}
 }
