--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@
 }
 
 @keyframes jump {
-    0%{bottom:200px;}
-    30%{bottom:100px;}
-    70%{bottom:100px;}
-    100%{bottom:200px;}
+    0%{bottom:0px;}
+    30%{bottom:75px;}
+    70%{bottom:75px;}
+    100%{bottom:0px;}
 }
 
 #block {
@@ -37,5 +37,6 @@
 
 @keyframes block {
     0%{left: 100vw;}
+    50%{left: 50vw;}
     100%{left:-100px;}
 }
